2010-09-30  Steffen Gebert  <steffen@steffen-gebert.de>

        * Fixed bug #12889: fe_adminLib.inc usages deprecated function split() (Thanks to Steffen Kamper and Ismaël Bidau)

2010-09-29  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #15858: htlmArea RTE: Stylesheet access error in Google Chrome 7
	* Fixed bug #15863: htmlArea RTE: Initilization never completes in Google Chrome 7

2010-09-29  Steffen Kamper  <steffen@typo3.org>

	* Added feature #15745: Integrate generic notification methods to show windows and dialogs based on ExtJS

2010-09-28  Xavier Perseguers  <typo3@perseguers.ch>

	* Added feature #15075: [Install] make a pre-check for required php-extensions (Thanks to Jigal van Hemert)

2010-09-28  Steffen Kamper  <steffen@typo3.org>

	* Follow-up to #15812: Add backend maintenance for login news - correction for deprecation call
	* Follow-up to #15812: Add backend maintenance for login news - added sprites for icon

2010-09-28  Ingo Renner  <ingo@typo3.org>

	* Added feature #15812: Add backend maintenance for login news

2010-09-28  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #15829: ExtDirect wrong XCLASS registration code (Thanks to Stefan Galinski)

2010-09-27  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #15820: htmlArea RTE: Failure to install AllowClipboard Helper extension raises js error
	* Follow-up to bug #15820: htmlArea RTE: Failure to install AllowClipboard Helper extension raises js error
	* Fixed bug #15339: htmlArea RTE: tkr_rteanchors breaks the link editing dialogue
	* Fixed bug #15730: htmlArea RTE: Problem editing a new list entry in list of items with inline markup
	* Fixed bug #15818: htmlArea RTE: Erratic behaviour of toolbar in some browsers

2010-09-27  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed unit tests #15802: t3lib_iconWorksTest fails some tests since fix in #15110 (Thanks to Philipp Gampe)

2010-09-26  Stanislas Rolland  <typo3@sjbr.ca>
