@@ -1,11 +1,15 @@
+2010-09-30  Francois Suter  <francois@typo3.org>
+
+	* Fixed bug #15639: Scheduler: Add missing classes and interface to autoload registry (Thanks to Marcus Krause)
+
 2010-09-30  Steffen Gebert  <steffen@steffen-gebert.de>
 
-        * Fixed bug #12889: fe_adminLib.inc usages deprecated function split() (Thanks to Steffen Kamper and Ismaël Bidau)
+	* Fixed bug #12889: fe_adminLib.inc usages deprecated function split() (Thanks to Steffen Kamper and Ismaël Bidau)
 
 2010-09-29  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Fixed bug #15858: htlmArea RTE: Stylesheet access error in Google Chrome 7
-	* Fixed bug #15863: htmlArea RTE: Initilization never completes in Google Chrome 7
+	* Fixed bug #15863: htmlArea RTE: Initialization never completes in Google Chrome 7
 
 2010-09-29  Steffen Kamper  <steffen@typo3.org>
 
